# RenneBot

./: README.md  main.py  manage.py  pyproject.toml  settings.py  tg_note.ipynb
plugins/server_monitor/: README.md  __init__.py  models.py
